[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprite-action-black.png" type="Texture" id=1]
[ext_resource path="res://Font/Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/Default.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/SmallBold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Interface/ShipyardMarket/ShipPurchaseModule.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0941176, 0.101961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.752941, 0.14902, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=5]
Button/fonts/font = ExtResource( 4 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 289, 193, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 97, 321, 30, 30 )

[node name="ShipPurchase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -980.0
margin_bottom = -560.0
rect_min_size = Vector2( 462, 40 )
size_flags_horizontal = 0
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Main" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
custom_constants/separation = 2

[node name="Details" type="VBoxContainer" parent="HBoxContainer/Main"]
margin_right = 300.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 25 )
custom_constants/separation = 2

[node name="Name" type="RichTextLabel" parent="HBoxContainer/Main/Details"]
margin_right = 300.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[b]PROBE SATELITLE"
text = "PROBE SATELITLE"
scroll_active = false

[node name="Type" type="RichTextLabel" parent="HBoxContainer/Main/Details"]
margin_top = 10.0
margin_right = 300.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 15 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = ">SHIP_REFINING_FREIGHTER
"
text = ">SHIP_REFINING_FREIGHTER
"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Main"]
margin_top = 27.0
margin_right = 300.0
margin_bottom = 39.0
rect_min_size = Vector2( 300, 12 )
custom_constants/separation = 5
alignment = 1

[node name="Details" type="Button" parent="HBoxContainer/Main/HBoxContainer"]
margin_right = 80.0
margin_bottom = 12.0
rect_min_size = Vector2( 80, 12 )
theme = SubResource( 5 )
text = "Details"
icon = SubResource( 1 )
align = 0
expand_icon = true

[node name="Buy" type="Button" parent="HBoxContainer/Main/HBoxContainer"]
margin_left = 85.0
margin_right = 300.0
margin_bottom = 12.0
rect_min_size = Vector2( 215, 12 )
theme = SubResource( 5 )
text = "$999999"
icon = SubResource( 2 )
align = 2
icon_align = 2
expand_icon = true

[node name="SimpleDetails" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 454.0
margin_bottom = 40.0
alignment = 1

[node name="Frame" type="RichTextLabel" parent="HBoxContainer/SimpleDetails"]
margin_top = 2.0
margin_right = 150.0
margin_bottom = 10.0
rect_min_size = Vector2( 150, 8 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[right]F: [b]HEAVY_FREIGHTER"
text = "F: HEAVY_FREIGHTER"
scroll_active = false

[node name="Reactor" type="RichTextLabel" parent="HBoxContainer/SimpleDetails"]
margin_top = 14.0
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 8 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[right]R: [b]ANTIMATTER_I"
text = "R: ANTIMATTER_I"
scroll_active = false

[node name="Engine" type="RichTextLabel" parent="HBoxContainer/SimpleDetails"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 8 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[right]E: [b]IMPULSE_DRIVE_I"
text = "E: IMPULSE_DRIVE_I"
scroll_active = false

[node name="AdditionalDetails" type="VBoxContainer" parent="HBoxContainer/SimpleDetails"]
margin_top = 38.0
margin_right = 150.0
margin_bottom = 38.0

[connection signal="pressed" from="HBoxContainer/Main/HBoxContainer/Details" to="." method="_on_Details_pressed"]
[connection signal="pressed" from="HBoxContainer/Main/HBoxContainer/Buy" to="." method="_on_Buy_pressed"]
